change: install least libraries

--- a/同じ機能-Laravel/Dockerfile
+++ b/同じ機能-Laravel/Dockerfile
@@ -2,24 +2,15 @@
 FROM php:8.2-apache
 
 # Install system dependencies and PHP extensions required by Laravel
-RUN apt-get update && apt-get install -y \
-    libpng-dev \
-    libjpeg-dev \
-    libfreetype6-dev \
-    zip \
-    unzip \
-    && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install gd pdo pdo_mysql
+RUN docker-php-ext-install pdo pdo_mysql
+
+# Copy the Laravel project files into the container
+COPY . /var/www/html
+
+RUN a2enmod rewrite
+COPY ./vhost.conf /etc/apache2/sites-available/000-default.conf
 
 # Set the working directory to /var/www/html (default for Apache)
 WORKDIR /var/www/html
 
-# Copy the Laravel project files into the container
-COPY . .
-
-COPY vhost.conf /etc/apache2/sites-available/000-default.conf
-
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
-RUN chown -R www-data:www-data /var/www/html \
-    && a2enmod rewrite
+RUN apt-get update && apt-get install -y
