--- a/同じ機能-Laravel/docker-compose.yml
+++ b/同じ機能-Laravel/docker-compose.yml
@@ -1,28 +1,30 @@
 services:
   # Laravel application service
-  app:
-    image: employee_management
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: employee_management
-    ports:
-      - "8080:80" 
-    volumes:
-      - .:/var/www/html
-    depends_on:
-      - db
+    app:
+        image: employee_management
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: employee_management
+        ports:
+            - "8080:80" 
+        volumes:
+            - .:/var/www/html
+        depends_on:
+            - db
 
   # MySQL service
-  db:
-    image: mysql:latest
-    container_name: employee_management_db
-    ports:
-      - "3306:3306"  # Expose container port 3306 to host port 3306
-    environment:
-      - MYSQL_DATABASE=${DB_DATABASE}
-      - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
-      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+    db:
+        image: mysql:latest
+        container_name: employee_management_db
+        ports:
+            - "3306:3306"  # Expose container port 3306 to host port 3306
+        environment:
+            - MYSQL_DATABASE=${DB_DATABASE}
+            - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
+            - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+        volumes:
+            - 'employee_management:/var/lib/mysql'
 
 volumes:
-  employee_management_db:
+    employee_management:
